--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "concurrently": "^5.3.0",
     "css-loader": "^5.0.0",
     "nodemon": "2.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
     "webpack": "^5.3.2",
